--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,12 @@
     "react-scripts": "2.1.1"
   },
   "dependencies": {
+    "aphrodite": "^2.2.3",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
