ready for first push to heroku

--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "2.1.1"
-  },
+  "devDependencies": {},
   "dependencies": {
     "aphrodite": "^2.2.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
